# kolokwium-treningowe-2022

./: CMakeLists.txt  Instrukcja.md  README.md  build-and-run.sh
.github/workflows/: kolokwium.yml
src/: zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
